...
  });

  return (
    <AuthScreenLayout
      title="Entrar"
      subtitle="Acesse sua conta para acompanhar suas finanças."
      testID="login-screen">
      <View style={styles.form}>
        <Controller
          control={control}
          name="email"
          render={({ field: { value, onChange, onBlur }, fieldState: { error } }) => (
            <TextField
...
